# smart_data_center

./: .gitignore  CMakeLists.txt  README.md  airflow.c  airflow.h  arduino.c  arduino.h  build_release.ps1  compare.c  compare.h  fuzzy.c  fuzzy.h  hud.c  hud.h  inspector.c  inspector.h  main.c  mlp.c  mlp.h  rack.c  rack.h  renderer.c  renderer.h  rodar.bat  scene.c  scene.h  sensors.c  sensors.h  signals.c  signals.h  take_screenshots.ps1
